deploy/base/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: troshka
  namespace: troshka
  labels:
    app.kubernetes.io/name: troshka
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: troshka-frontend
    weight: 100
  port:
    targetPort: http
